Add base styling

--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>HTML template</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+  <!-- HTML Content Note for Markbot -->
+  <header>
+    <h1>HTML Template</h1>
+  </header>
+
+  <main>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <img src="images/logo.svg" alt="Logo">
+    <a href="https://www.wikipedia.org">Wikipedia</a>
+  </main>
 </body>
 </html>
