--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>HTML template</title>
+  <title>Dinosaur designs</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <!-- HTML Content Note for Markbot -->
   <header>
-    <h1>HTML Template</h1>
+    <img src="images/dinos-r-us.svg" alt="dinos-r-us Logo">
   </header>
-
-  <main>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <img src="images/logo.svg" alt="Logo">
-    <a href="https://www.wikipedia.org">Wikipedia</a>
-  </main>
+  <body>
+    <h1>Hadrosaur</h1>
+    <figure>
+      <img src="images/hadrosaur.jpg" alt="Hadrosaur">
+      <figcaption>Thadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
+    </figure>
+  </body>
 </body>
 </html>
