--- a/index.html
+++ b/index.html
@@ -9,12 +9,27 @@
 <body>
   <header>
     <img src="images/dinos-r-us.svg" alt="dinos-r-us Logo">
+    <ul>
+      <li><a href="#hadrosaur">Hadrosaur</a></li>
+      <li><a href="#iguanodon">Iguanodon</a></li>
+      <li><a href="#stegosaurus">Stegosaurus</a></li>
+    </ul>
   </header>
   <body>
-    <h1>Hadrosaur</h1>
+    <h1 id="hadrosaur">Hadrosaur</h1>
     <figure>
       <img src="images/hadrosaur.jpg" alt="Hadrosaur">
       <figcaption>Thadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
+    </figure>
+    <h1 id="iguanodon">Iguanodon</h1>
+    <figure>
+      <img src="images/iguanodon.jpg" alt="Iguanodon">
+      <figcaption>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcaption>
+    </figure>
+    <h1 id="stegosaurus">Stegosaurus</h1>
+    <figure>
+      <img src="images/stegosaurus.jpg" alt="Stegosaurus">
+      <figcaption>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</figcaption>
     </figure>
   </body>
 </body>
