--- a/index.html
+++ b/index.html
@@ -2,36 +2,38 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Dinosaur designs</title>
+  <title>Dinos 'R' Us</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
 </head>
 <body>
   <header>
-    <img src="images/dinos-r-us.svg" alt="dinos-r-us Logo">
-    <ul>
-      <li><a href="#hadrosaur">Hadrosaur</a></li>
-      <li><a href="#iguanodon">Iguanodon</a></li>
-      <li><a href="#stegosaurus">Stegosaurus</a></li>
-    </ul>
+    <h1><img src="images/dinos-r-us.svg" alt="Dinos 'R' Us"></h1>
+    <nav>
+      <ol>
+        <li><a href="#hadrosaur">Hadrosaur</a></li>
+        <li><a href="#iguanodon">Iguanodon</a></li>
+        <li><a href="#stegosaurus">Stegosaurus</a></li>
+      </ol>
+    </nav>
   </header>
-  <body>
-    <h1 id="hadrosaur">Hadrosaur</h1>
+  <main>
+    <h2 id="hadrosaur">Hadrosaur</h2>
     <figure>
       <img src="images/hadrosaur.jpg" alt="Hadrosaur">
-      <figcaption>Thadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
+      <figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
     </figure>
-    <h1 id="iguanodon">Iguanodon</h1>
+    <h2 id="iguanodon">Iguanodon</h2>
     <figure>
       <img src="images/iguanodon.jpg" alt="Iguanodon">
       <figcaption>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcaption>
     </figure>
-    <h1 id="stegosaurus">Stegosaurus</h1>
+    <h2 id="stegosaurus">Stegosaurus</h2>
     <figure>
       <img src="images/stegosaurus.jpg" alt="Stegosaurus">
       <figcaption>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</figcaption>
     </figure>
-  </body>
+  </main>
 </body>
 </html>
