Fix further markbot issues

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h2 id="hadrosaur">Hadrosaur</h2>
     <figure>
       <img src="images/hadrosaur.jpg" alt="Hadrosaur">
-      <figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
+      <figcaption class="big-caption">Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
     </figure>
     <h2 id="iguanodon">Iguanodon</h2>
     <figure>
